--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.23.4",
     "element-plus": "^2.2.9",
     "lodash": "^4.17.21",
+    "phaser": "^3.55.2",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.1.2",
@@ -18,6 +19,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
-    "vite": "^2.9.14"
+    "vite": "^2.9.14",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Sun0fABeach/vue-phaser3.git"
   }
 }
