--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driverClassName: com.mysql.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/catchprize?serverTimezone=Asia/Seoul
     username: ssafy
     password: ssafy
@@ -14,6 +14,8 @@ spring:
       hibernate:
         #        show_sql: true
         format_sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    show-sql: true
 
 
 logging:
