✒️comment : open-in-view 세팅 TODO 주석 추가

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
         format_sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
-
+  # TODO: 개발 마무리시 spring.jpa.open-in-view 세팅 고려(성능 이슈)
 
 logging:
   level:
