--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -31,10 +31,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    //UUID
+    // oauth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    // UUID
     implementation "com.fasterxml.uuid:java-uuid-generator:4.0.1"
+    // jjwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-    //querydsl 추가
+    // querydsl 추가
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
 
