--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/catchprize?serverTimezone=Asia/Seoul
-    username: ssafy
-    password: ssafy
+    url: ${DB.URL}
+    username: ${DB.USERNAME}
+    password: ${DB.PASSWORD}
 
   jpa:
     hibernate:
@@ -17,6 +17,45 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
   # TODO: 개발 마무리시 spring.jpa.open-in-view 세팅 고려(성능 이슈)
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: ${KAKAO.CLIENT_ID}
+            client-secret: ${KAKAO.CLIENT_SECRET}
+            redirect-uri: ${KAKAO.REDIRECT_URI}
+            authorization-grant-type: authorization_code
+            client-authentication-method: POST
+            client-name: Kakao
+            scope:
+              - profile_nickname
+#              - account_email
+          naver:
+            client-id: <your id>
+            client-secret: <your secret>
+            redirect-uri: <your url>/login/oauth2/code/naver
+            authorization-grant-type: authorization_code
+            scope:
+              - name
+              - email
+          google:
+            client-id: <your id>
+            client-secret: your secret>
+            scope:
+              - profile
+              - email
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
 
 logging:
   level:
