--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
           kakao:
             client-id: ${KAKAO.CLIENT_ID}
             client-secret: ${KAKAO.CLIENT_SECRET}
-            redirect-uri: ${KAKAO.REDIRECT_URI}
+            redirect-uri: ${BASE.URL}${KAKAO.REDIRECT_URI}
             authorization-grant-type: authorization_code
             client-authentication-method: POST
             client-name: Kakao
@@ -32,19 +32,20 @@ spring:
               - profile_nickname
 #              - account_email
           naver:
-            client-id: <your id>
-            client-secret: <your secret>
-            redirect-uri: <your url>/login/oauth2/code/naver
+            client-id: ${NAVER.CLIENT_ID}
+            client-secret: ${NAVER.CLIENT_SECRET}
+            redirect-uri: ${BASE.URL}${NAVER.REDIRECT_URI}
             authorization-grant-type: authorization_code
             scope:
               - name
-              - email
+#              - email
           google:
-            client-id: <your id>
-            client-secret: your secret>
+            client-id: ${GOOGLE.CLIENT_ID}
+            client-secret: ${GOOGLE.CLIENT_SECRET}
+            redirect-uri: ${BASE.URL}${GOOGLE.REDIRECT_URI}
             scope:
               - profile
-              - email
+#              - email
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
