⚡️ feat : swagger 3.0.0 added

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    // swagger 3 추가
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 }
 
 tasks.named('test') {
