--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -58,6 +58,16 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 
+# app
+app:
+  auth:
+    token:
+      # sh -> openssl rand -hex 64
+      secret-key: ${JWT.SECRET_KEY}
+      refresh-cookie-key: refresh
+  oauth2:
+    authorizedRedirectUri: ${BASE.CLIENT_URL}/oauth2/redirect
+
 logging:
   level:
     org.hibernate.SQL: debug
