⚙️refactor : Added ModelMapper

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation "com.fasterxml.uuid:java-uuid-generator:4.0.1"
     // jjwt
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
@@ -53,6 +54,9 @@ dependencies {
 
     // swagger 3 추가
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    
+    // modelmapper 3.1.0 추가
+    implementation 'org.modelmapper:modelmapper:3.1.0'
 }
 
 tasks.named('test') {
