--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -37,7 +37,10 @@ dependencies {
     implementation "com.fasterxml.uuid:java-uuid-generator:4.0.1"
     // jjwt
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    
+    // RandomStringUtils
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
