🛠️fix : yml OSIV 해제

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
         format_sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
+    open-in-view: false # REST용 Framework이므로 OSIV 해제
   
   # swagger 매칭
   mvc:
