--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,9 +1,16 @@
+server:
+  port: 8081
+
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: ${DB.URL}
     username: ${DB.USERNAME}
     password: ${DB.PASSWORD}
+
+  redis:
+    host: localhost
+    port: 6379
 
   jpa:
     hibernate:
