--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -54,6 +54,13 @@ dependencies {
     // spring-boot-starter-data-redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.7.2'
 
+    // openvidu
+    implementation 'io.openvidu:openvidu-java-client:2.22.0'
+
+    // httpclient
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+
+
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
