--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -72,6 +72,11 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 
+# openviud
+openvidu:
+  url: https://localhost:4443/
+  secret: MY_SECRET
+
 # app
 app:
   auth:
