--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "event-source-polyfill": "^1.0.28",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "openvidu-browser": "^2.22.0",
     "phaser": "^3.55.2",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
