--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -79,10 +79,10 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 
-# openviud
+# openvidu
 openvidu:
-  url: https://localhost:4443/
-  secret: MY_SECRET
+  url: https://ov.catch-prize.com
+  secret: 79oN-I1_0T__mw-TMllfM
 
 
 
